@startuml

title __TILE's Class Diagram__\n

  namespace tilegame {
    namespace tile {
      class tilegame.tile.ConturTile {
          + ConturTile()
          + isSolid()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.Tile {
          {static} + ConturTile : Tile
          {static} + TILEHEIGHT : int
          {static} + TILEWIDTH : int
          {static} + acidTile : Tile
          {static} + bgrTile : Tile
          {static} + box : Tile
          {static} + flame : Tile
          {static} + jigsaw : Tile
          {static} + tepi : Tile
          {static} + tiles : Tile[]
          {static} + toxic : Tile
          # id : int
          # texture : BufferedImage
          + Tile()
          + doesDamage()
          + getId()
          + isSolid()
          + render()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.acidTile {
          + acidTile()
          + isSolid()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.bgrTile {
          + bgrTile()
          + isSolid()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.box {
          + box()
          + isSolid()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.flame {
          + flame()
          + isSolid()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.jigsaw {
          + isSolid()
          + jigsaw()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.tepi {
          + isSolid()
          + tepi()
      }
    }
  }
  

  namespace tilegame {
    namespace tile {
      class tilegame.tile.toxic {
          + isSolid()
          + toxic()
      }
    }
  }
  

  tilegame.tile.ConturTile -up-|> tilegame.tile.Tile
  tilegame.tile.acidTile -up-|> tilegame.tile.Tile
  tilegame.tile.bgrTile -up-|> tilegame.tile.Tile
  tilegame.tile.box -up-|> tilegame.tile.Tile
  tilegame.tile.flame -up-|> tilegame.tile.Tile
  tilegame.tile.jigsaw -up-|> tilegame.tile.Tile
  tilegame.tile.tepi -up-|> tilegame.tile.Tile
  tilegame.tile.toxic -up-|> tilegame.tile.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
